* Removed template functions escape(), tt_url() & UNESCAPE()
* Javascript improvements based on automated code review from lgtm.com
* Disentangled processing of UI and printed documents
* Remove remnants of custom field support
* Remove unused infrastructure to administer access role groups
* Stricter data model for storage of foreign currency exchange rates
* Simplified request handling by
  * Making old/bin/old-handler.pl a PSGI app (LedgerSMB::oldHandler)
  * Stripping LedgerSMB::Form from anything handled by middleware
  * Separating 'setup.pl authentication' into its own middleware
* Remove unused 'queue_payments' and 'poll_frequency' settings
* Remove unsupported, non-functioning scripts for asynchronous bulk payments

Dependency updates
* Dojo Toolkit updated to 1.16.0
* TeX::Encode >= 2.007
* Authen::SASL (new)
* Cookie::Baker (new)
* Email::Sender (new)
* Email::Stuffer (new)
* Session::Storage::Secure (new)
* String::Random (new)
* MIME::Lite (dropped)


Changelog for 1.7 Series
2019-10-04

Changelog for 1.7.10
* Fix error displaying NULL exchange rates (#4438)
* Fix incorrect receipt totals due to number formatting (#4441)
* Prevent re-approval of approved inventory adjustment (#4458)
* Fix NULL transaction dates in inventory adjustment (#4463)
* Fix alignment of numbers in Inventory Activity report (#4454)
* Fix variance calculation on reconciliation report (#4486)
* Fix CSV import through explicit version on HTTP::Headers::Fast dependecy


Changelog for 1.7.9
* Fix authentication issue due to inconsistent cookie handling (#4380)
* Fix delete access for SIC codes (standard industry code) (#4391)
* Fix SL 3.0 migration of assemblies (#4386)


Changelog for 1.7.8
* Upgrade Dojo dependency to 1.15.1
* Load the template from the database when printing receipts
* Prevent dead-locks in response to request from timed out session
* Add monetary formatting to payments/receipts screen and report


Changelog for 1.7.7